<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/latlng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_weight="0"/>

            <EditText
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_your_longitude"
                android:text="39.963175"
                android:inputType="text"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_weight="0"/>

            <EditText
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_your_latitude"
                android:inputType="text"
                android:text="120.400244"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_below="@id/latlng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="location"
            android:text="@string/location"/>

        <Button
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:onClick="delete"
            android:text="@string/delete"/>

    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/map_view"
        android:layout_below="@id/btns"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>